--- a/_posts/2019-05-29-455.html
+++ b/_posts/2019-05-29-455.html
@@ -3,8 +3,8 @@ layout: default
 title: May 29, 2019
 number: 455
 label1: Oregon Junco <br>Vancouver, BC  -- HNE
-label2:  https://lh3.googleusercontent.com/4BNU1zpKmUQ_dykaDtdZZnbnfgdIt16fwCtl9uTYFn06bEtouA38eX0HhY4Iy7l2MviAG0E-zE6fgWAoO4sF2BAtbOovZQ70fyg5t3FpYqst4RPlSCnBQ33NgN5NgIf1pcGBvOwTX0GrpXEY7AShWtK6hUCg1B8C1y8iYUP6fPWtIh7mRZR1q44L7_VMX-6WTT-tpRsiOsye6Nvnte4fvECdmRDFhs4nS1KRc2cHTp157f7xW4SZf4H5cJX4Y5IiYIzI23Zf_xbiSgrH2rG0Swj_4tjFYOAhb5RKq6jYwu6R_eT5voDdkl_J3D80RSjcQN4XnjOPEH3uuXnuiCiAJnLTT7mv4G-x8OV-dLIyysRxV4q-tsSoRnPUAvFHOd5KtufyoafQ4butpW6bemCpyKJvz4FqYKxu-vnoYJ-ovMuYmwArY2w1VI4vz1P0Se64C7z1O-nAY2H0LwHz90cesIHMroImoaNhP3neL0B69yOS2w3aabYrF69i1_8VfNkrqMbSmo6YlbXozkUXHOPKxQ6j2o1urtskycd1DpAiDcUkuqRPBkolemT2SVrGHtT_Dit0qSsFdYfqggYjPFt2oY5HtkkL-UOYq2IDEzI41A76pMc6juXNurb_meTLrWlzV5EW0kG0ilI4D-p_I9ic6ardfTeIb1s_WpnRKEgdweix-TCrBbl6y6z7BZcL5E883hXxq8sz4dLKnTn8apYUl_UV=w822-h526-no
-image1: 
+label2:  
+image1: https://lh3.googleusercontent.com/4BNU1zpKmUQ_dykaDtdZZnbnfgdIt16fwCtl9uTYFn06bEtouA38eX0HhY4Iy7l2MviAG0E-zE6fgWAoO4sF2BAtbOovZQ70fyg5t3FpYqst4RPlSCnBQ33NgN5NgIf1pcGBvOwTX0GrpXEY7AShWtK6hUCg1B8C1y8iYUP6fPWtIh7mRZR1q44L7_VMX-6WTT-tpRsiOsye6Nvnte4fvECdmRDFhs4nS1KRc2cHTp157f7xW4SZf4H5cJX4Y5IiYIzI23Zf_xbiSgrH2rG0Swj_4tjFYOAhb5RKq6jYwu6R_eT5voDdkl_J3D80RSjcQN4XnjOPEH3uuXnuiCiAJnLTT7mv4G-x8OV-dLIyysRxV4q-tsSoRnPUAvFHOd5KtufyoafQ4butpW6bemCpyKJvz4FqYKxu-vnoYJ-ovMuYmwArY2w1VI4vz1P0Se64C7z1O-nAY2H0LwHz90cesIHMroImoaNhP3neL0B69yOS2w3aabYrF69i1_8VfNkrqMbSmo6YlbXozkUXHOPKxQ6j2o1urtskycd1DpAiDcUkuqRPBkolemT2SVrGHtT_Dit0qSsFdYfqggYjPFt2oY5HtkkL-UOYq2IDEzI41A76pMc6juXNurb_meTLrWlzV5EW0kG0ilI4D-p_I9ic6ardfTeIb1s_WpnRKEgdweix-TCrBbl6y6z7BZcL5E883hXxq8sz4dLKnTn8apYUl_UV=w822-h526-no
 mouse1:  
 image2:
 mouse2: 
