--- a/_posts/2019-05-31-457.html
+++ b/_posts/2019-05-31-457.html
@@ -3,8 +3,8 @@ layout: default
 title: May 31, 2019
 number: 457
 label1: Southern Gulf Islandso <br> BC  -- HNE
-label2:  https://lh3.googleusercontent.com/2XGcWbnulbkiVyWj5eVKhihDktTyLuJ06AfkuNDAdCebo2v4YMfE7kp2U0cC0gmyosAcEmIlnoSkJ9dJFE-IVdp2e7r4wA5HuxNBt_0SjOh6Ref4641eAPXEvj2nADc2ODgOK28W7xIPGfrrHXnpWTSiAFOaJOxkWPbJYidwhujZBg0-pGpzUTd7LfK9jqdYBvpj44RLMNu0dD20or9LCOshgra5ArUTuoCi1F51uD73Px4EqZmG3STMC0rY01FCtVytrI11G0_kWq0l840uQBxafmZV2oFtN8i9DRe8UAhzAMWPIl3y_eqtRADzYA6OuZJCWMIdtD-4FQoCoFPd8E6p-qARIwauucEweDS0enBKW915c78xlnVdW6bLz4XCFIavmMZnS0vlvhq-UXGwdpyRMJhvV6Qv9GpFIyICav4uOUPlk1XUYRLfvVFKFlTeUbr8f4YJlwFTwwUJGW9CmiJKTttY7JYTOA_HcMn_0VVoqyIouWF85OKoVnonaWNg_A17sne703jqLhBe-I-eqGOwrDf0nKAuqrrHLyjD6UnqxUX_DUJljgI_2NkoGfcS3awyTcKd06ow4xNZ-kAvJTDzfA7VnnaPHdqp7cseg51ivu1-U6r9eziwNsOhZ9enT3FoXYe2yfkwdntTaQIjjg1LCJbkBS-g2V5PZjyOcohiJbQEw-lCA8sj_L9OlM4WbvXj0fu2gpT7eY8dahj_cjv2=w822-h466-no
-image1: 
+label2:  
+image1: https://lh3.googleusercontent.com/2XGcWbnulbkiVyWj5eVKhihDktTyLuJ06AfkuNDAdCebo2v4YMfE7kp2U0cC0gmyosAcEmIlnoSkJ9dJFE-IVdp2e7r4wA5HuxNBt_0SjOh6Ref4641eAPXEvj2nADc2ODgOK28W7xIPGfrrHXnpWTSiAFOaJOxkWPbJYidwhujZBg0-pGpzUTd7LfK9jqdYBvpj44RLMNu0dD20or9LCOshgra5ArUTuoCi1F51uD73Px4EqZmG3STMC0rY01FCtVytrI11G0_kWq0l840uQBxafmZV2oFtN8i9DRe8UAhzAMWPIl3y_eqtRADzYA6OuZJCWMIdtD-4FQoCoFPd8E6p-qARIwauucEweDS0enBKW915c78xlnVdW6bLz4XCFIavmMZnS0vlvhq-UXGwdpyRMJhvV6Qv9GpFIyICav4uOUPlk1XUYRLfvVFKFlTeUbr8f4YJlwFTwwUJGW9CmiJKTttY7JYTOA_HcMn_0VVoqyIouWF85OKoVnonaWNg_A17sne703jqLhBe-I-eqGOwrDf0nKAuqrrHLyjD6UnqxUX_DUJljgI_2NkoGfcS3awyTcKd06ow4xNZ-kAvJTDzfA7VnnaPHdqp7cseg51ivu1-U6r9eziwNsOhZ9enT3FoXYe2yfkwdntTaQIjjg1LCJbkBS-g2V5PZjyOcohiJbQEw-lCA8sj_L9OlM4WbvXj0fu2gpT7eY8dahj_cjv2=w822-h466-no
 mouse1:  Island ho! 
 image2:
 mouse2: 
