--- a/_posts/2019-06-02-459.html
+++ b/_posts/2019-06-02-459.html
@@ -3,8 +3,8 @@ layout: default
 title: June 2, 2019
 number: 459
 label1: Lupine sp. <br>Galiano Island, BC  -- HNE
-label2:  https://lh3.googleusercontent.com/eGPM19KOE2F8XQviTX7LyOMonUtHEz3xQlKYAS6lgLuDVxZy7CnqQNG5Ukl1Qdo6bcBPJpe_U15n9IVY8xGcfpk_jRzOed5-7MKN7rw0JgzWcGcO8YwjFvSBUj7H7le75UQ9SSWW_5NZlze9rruB04Xh5M4ZGNHlhuXAUYGLQKFa5GpKE2T-onBfDqJ_1eCW7U36DqV7Fb2DnwN7UJOUevXndnJXTAOg9zW4agpuRYEQSC_aJc4L3xGQ95UFVIc8ta3Q-4dSeZwypE9ht86-cNpQ1AJ5nUS9A7gt7CS9Bws6F5wFVe5uHjjkqH6fdQj_BEOmlNJmrJZehuvbPTeh-nvywrnj0h8gqQfPOHFnkXvpHQRvImkwgNJdYCYlH0tF9vmKGRgtGKXR42UC1Q9RfoYKFXHcO0_s9HaMM8fOWY4w6Z7fNncEwM41OdB11YW5Qt2llUkyKeqjzGtOB8vrYCTa6EpArwNeP-OxJp-Cg1Ouxt-wn0kMnAOQUcl09YKAAK04CM_WNfLxmNhvRywSXjlTyvaBiffbGbnifipN-KcwWd-wp4U5XjMwiMqExbZJ9qLHMHByNOvtUF4Ok-IPfwdzpUUIv_B7L92Kx2pqYaqJ3-g_qQQn_Pn5sqnek9QfRXYSfXMfmXrnxx-Xj76s-WhtuEmurmpLqLoMUgLxNYcFbYaHsMJU_ZVFURg8lFgJXdu6NsQY4PzBqYIkKpzsI1_E=w822-h546-no
-image1: 
+label2: 
+image1:  https://lh3.googleusercontent.com/eGPM19KOE2F8XQviTX7LyOMonUtHEz3xQlKYAS6lgLuDVxZy7CnqQNG5Ukl1Qdo6bcBPJpe_U15n9IVY8xGcfpk_jRzOed5-7MKN7rw0JgzWcGcO8YwjFvSBUj7H7le75UQ9SSWW_5NZlze9rruB04Xh5M4ZGNHlhuXAUYGLQKFa5GpKE2T-onBfDqJ_1eCW7U36DqV7Fb2DnwN7UJOUevXndnJXTAOg9zW4agpuRYEQSC_aJc4L3xGQ95UFVIc8ta3Q-4dSeZwypE9ht86-cNpQ1AJ5nUS9A7gt7CS9Bws6F5wFVe5uHjjkqH6fdQj_BEOmlNJmrJZehuvbPTeh-nvywrnj0h8gqQfPOHFnkXvpHQRvImkwgNJdYCYlH0tF9vmKGRgtGKXR42UC1Q9RfoYKFXHcO0_s9HaMM8fOWY4w6Z7fNncEwM41OdB11YW5Qt2llUkyKeqjzGtOB8vrYCTa6EpArwNeP-OxJp-Cg1Ouxt-wn0kMnAOQUcl09YKAAK04CM_WNfLxmNhvRywSXjlTyvaBiffbGbnifipN-KcwWd-wp4U5XjMwiMqExbZJ9qLHMHByNOvtUF4Ok-IPfwdzpUUIv_B7L92Kx2pqYaqJ3-g_qQQn_Pn5sqnek9QfRXYSfXMfmXrnxx-Xj76s-WhtuEmurmpLqLoMUgLxNYcFbYaHsMJU_ZVFURg8lFgJXdu6NsQY4PzBqYIkKpzsI1_E=w822-h546-no
 mouse1:  
 image2:
 mouse2: 
