--- a/_posts/2019-06-03-460.html
+++ b/_posts/2019-06-03-460.html
@@ -3,8 +3,8 @@ layout: default
 title: June 3, 2019
 number: 460
 label1: Fish Crow <br>Princeton, NJ  -- HNE
-label2:  https://lh3.googleusercontent.com/JSxAITX5hX8XglKwq1_hA7SOrp0LZuG27vs5CwMFMuQy4a8lpcY5PCiIgDCXnVHgQ2pgUQ9o2BfYmVhRxwhC1wIocFo8JlsHzV-cqalzcIKRNR_TpY7s5gE-w7n3dGtfsuIxR4rrmTANZxKmO5rPYWkoTlehTjnFtmYEdVM5WMciqRLAPNlfossOpwTaBZ-cbFneg79Wm8_Le568Z8XRWYJiFLI1yaylaRK5swK8HY53kwZoplxLFaPFHbg-TderEysp-ALNYWLtDm74piVf_bBtfzMkPlJgV0RKxcHA_x2AOlx56z9ClNFtj9TD9e_vszVB30oQdcyRjql0Uf2xySLu86LQMxgrW_paRl6NzezQndbFcDgAMaV89l4fZyQYts4XEkWQVQ3HaDEaASGKXqvGqI9Emb9A4qoQMJblhThsYx0G--wnXuiCap1GmxQasZxDoohyo4a38QgeascPrpowMITIBOz69xFNzVovV_ugoyJ1oaglSNk8oJT6T0QgThnv1z6Tvej6wrhNxSfsn0pM5eAmPBkOqUhoqNheQjiIFZnD3tS0_-GlHK-twCGlh0MFI1HDjc_mIU2v-sT_3hTbUnPo9cuY1H2CQUJW09bqwPiLWKY6hGoOFNHSfBOHVk7t1kpzl3v5wgskyK9QGXsgAYXypWGIl408nltKnb5D4p9KCkgrhLKKQA8I52jyIn2jLK7pU78WLfEhPI5OiE7g=w521-h346-no
-image1: 
+label2:  
+image1: https://lh3.googleusercontent.com/JSxAITX5hX8XglKwq1_hA7SOrp0LZuG27vs5CwMFMuQy4a8lpcY5PCiIgDCXnVHgQ2pgUQ9o2BfYmVhRxwhC1wIocFo8JlsHzV-cqalzcIKRNR_TpY7s5gE-w7n3dGtfsuIxR4rrmTANZxKmO5rPYWkoTlehTjnFtmYEdVM5WMciqRLAPNlfossOpwTaBZ-cbFneg79Wm8_Le568Z8XRWYJiFLI1yaylaRK5swK8HY53kwZoplxLFaPFHbg-TderEysp-ALNYWLtDm74piVf_bBtfzMkPlJgV0RKxcHA_x2AOlx56z9ClNFtj9TD9e_vszVB30oQdcyRjql0Uf2xySLu86LQMxgrW_paRl6NzezQndbFcDgAMaV89l4fZyQYts4XEkWQVQ3HaDEaASGKXqvGqI9Emb9A4qoQMJblhThsYx0G--wnXuiCap1GmxQasZxDoohyo4a38QgeascPrpowMITIBOz69xFNzVovV_ugoyJ1oaglSNk8oJT6T0QgThnv1z6Tvej6wrhNxSfsn0pM5eAmPBkOqUhoqNheQjiIFZnD3tS0_-GlHK-twCGlh0MFI1HDjc_mIU2v-sT_3hTbUnPo9cuY1H2CQUJW09bqwPiLWKY6hGoOFNHSfBOHVk7t1kpzl3v5wgskyK9QGXsgAYXypWGIl408nltKnb5D4p9KCkgrhLKKQA8I52jyIn2jLK7pU78WLfEhPI5OiE7g=w521-h346-no
 mouse1:  This bird's call is the best part about the US Southeast 
 image2:
 mouse2: 
