--- a/_posts/2019-06-04-461.html
+++ b/_posts/2019-06-04-461.html
@@ -3,8 +3,8 @@ layout: default
 title: June 4, 2019
 number: 461
 label1: Sugar Maple <br>Princeton, NJ  -- HNE
-label2:  https://lh3.googleusercontent.com/5woXdL4_ttGCeQ0TV5OAp2omuBefEWvr0hZwTbdxDX2Npm94ldARrrRK5_ZnbqqUcLilTktGna52WRRPTiuxabuSf__vPnif_GPGKEDvD5Hq8QLFEG1ZGlgdXJ58W2i3ScfecXNrRZ4eSHx6f4O-fIJvLvwt-PD6Du9ShY-QyGARuJVzepkbBlGSxh3TtyRjnMCI4zp11TFNY56qkV-vvg1aVBEBoVctKysDgl5Ax-V_EzuQEDA__nh88RL6TRVRLgvQup1hs9W3cdLz5wryyXhk8ZJMIhtLI_QX4FVX4D0v9o3Xthsh-imkKxyzQEqTuCPEPrZ3iUX0pwV2u4krlztch1VaXGfTdIPyDBvcs5GDjmqr7ovnFuQlsK4FYrm6IBAyfOZH28W7U6e9_D0HkgIoYrdplPXG_gCM83WXzNVIc27441YCY8t9AqvY5cUV5iDOy9pO2jo6M-U22Vz65qynScg33mLByKp3YccRdYM8FBbF32-K00yCLyX939wqvLhrT0ScwM5m-VjhUfuVdsMYzO3Z6VR67aT0vJ2ohC1yhb2PRv48jkJcEDpvONyvWbFr-4QdCmSkQXNiilmfF8WVmoaRQwtFTfqCK3hWlxocWwKJVPS1H508jzvOTBOVK6C7er-z70T3FEQg5IXS6ZsuhSE592XF9yJGPbZZLSU2_Y-lz244OZxuA_vwNBHuQB0yQJFfW3FJdUGXdCzo9Yb6=w822-h548-no
-image1: 
+label2: 
+image1:  https://lh3.googleusercontent.com/5woXdL4_ttGCeQ0TV5OAp2omuBefEWvr0hZwTbdxDX2Npm94ldARrrRK5_ZnbqqUcLilTktGna52WRRPTiuxabuSf__vPnif_GPGKEDvD5Hq8QLFEG1ZGlgdXJ58W2i3ScfecXNrRZ4eSHx6f4O-fIJvLvwt-PD6Du9ShY-QyGARuJVzepkbBlGSxh3TtyRjnMCI4zp11TFNY56qkV-vvg1aVBEBoVctKysDgl5Ax-V_EzuQEDA__nh88RL6TRVRLgvQup1hs9W3cdLz5wryyXhk8ZJMIhtLI_QX4FVX4D0v9o3Xthsh-imkKxyzQEqTuCPEPrZ3iUX0pwV2u4krlztch1VaXGfTdIPyDBvcs5GDjmqr7ovnFuQlsK4FYrm6IBAyfOZH28W7U6e9_D0HkgIoYrdplPXG_gCM83WXzNVIc27441YCY8t9AqvY5cUV5iDOy9pO2jo6M-U22Vz65qynScg33mLByKp3YccRdYM8FBbF32-K00yCLyX939wqvLhrT0ScwM5m-VjhUfuVdsMYzO3Z6VR67aT0vJ2ohC1yhb2PRv48jkJcEDpvONyvWbFr-4QdCmSkQXNiilmfF8WVmoaRQwtFTfqCK3hWlxocWwKJVPS1H508jzvOTBOVK6C7er-z70T3FEQg5IXS6ZsuhSE592XF9yJGPbZZLSU2_Y-lz244OZxuA_vwNBHuQB0yQJFfW3FJdUGXdCzo9Yb6=w822-h548-no
 mouse1:  
 image2:
 mouse2: 
