--- a/_posts/2019-06-05-462.html
+++ b/_posts/2019-06-05-462.html
@@ -3,8 +3,8 @@ layout: default
 title: June 5, 2019
 number: 462
 label1: Blue Jay <br>Princeton, NJ  -- HNE
-label2:   https://lh3.googleusercontent.com/y5E88zjhiVvxovn-Fsd0ynG950Yvs_a0Ad12-3EWJjoEu6pgqDWqlWv4bfjgsnyDYs1WB8JZ3XQPbooRpf-fs1hhFg4cVuwalkEGy8DyD1qYzPLy1Y2IU_Y3T_s5d9bOPK_HQGa537vGakerPAQBbfJJPyFQl7azADsbd80-P3aGx5HY7Wksly8uo3r-jmcq3YKZdhKtsIWPpGa0AkmFkOZmDRk3dHeF1Q5siuhzY23Hbk_WYziMzdw3cbpGCIqQlQ-1e4A3FKMtpo6xjCRfnFkcPSLKgs44cA97BMgWeZ1T5TwEoHOBoq94LNpZlFx1Dlk-8cTW0FJEo1QvRYjb2K29kFJeMW-tCTIwnPBFcrN599RyQdqQXFgOENx0AWtbl5_ybLbVRSz_tsVKMIQYm2mo62au6VaL1LCu1l2uHp2Di3iYhQn3Wv3zrGaHkIb4vvcVm6B4RHEv5Pd569ElFugMZqee2I6Hy4s7bKEXcnDqtLZLMFW8HulWn0LGxzRJqyzP4iZWUf3i4vdaruEeNLdOOnrAbEOz2nLDj9gVgfgHYACNO5giTNf4Pobi7b2r-FCWCnq9AA9EQRMegW6iERFA_zTLk6DrHOKyRU7nanHqs7ylwvDsU8s1L8onwKehivGWq0eWqED50-fxFx1j4k7h0fxfOmsrdYeBagQ4MnbClLqKefLQahJUJW9J-sZZSa7IeDDisOD2Jaf_TBILE3s_=w822-h548-no
-image1: 
+label2: 
+image1:   https://lh3.googleusercontent.com/y5E88zjhiVvxovn-Fsd0ynG950Yvs_a0Ad12-3EWJjoEu6pgqDWqlWv4bfjgsnyDYs1WB8JZ3XQPbooRpf-fs1hhFg4cVuwalkEGy8DyD1qYzPLy1Y2IU_Y3T_s5d9bOPK_HQGa537vGakerPAQBbfJJPyFQl7azADsbd80-P3aGx5HY7Wksly8uo3r-jmcq3YKZdhKtsIWPpGa0AkmFkOZmDRk3dHeF1Q5siuhzY23Hbk_WYziMzdw3cbpGCIqQlQ-1e4A3FKMtpo6xjCRfnFkcPSLKgs44cA97BMgWeZ1T5TwEoHOBoq94LNpZlFx1Dlk-8cTW0FJEo1QvRYjb2K29kFJeMW-tCTIwnPBFcrN599RyQdqQXFgOENx0AWtbl5_ybLbVRSz_tsVKMIQYm2mo62au6VaL1LCu1l2uHp2Di3iYhQn3Wv3zrGaHkIb4vvcVm6B4RHEv5Pd569ElFugMZqee2I6Hy4s7bKEXcnDqtLZLMFW8HulWn0LGxzRJqyzP4iZWUf3i4vdaruEeNLdOOnrAbEOz2nLDj9gVgfgHYACNO5giTNf4Pobi7b2r-FCWCnq9AA9EQRMegW6iERFA_zTLk6DrHOKyRU7nanHqs7ylwvDsU8s1L8onwKehivGWq0eWqED50-fxFx1j4k7h0fxfOmsrdYeBagQ4MnbClLqKefLQahJUJW9J-sZZSa7IeDDisOD2Jaf_TBILE3s_=w822-h548-no
 mouse1:  Just fledged! Amazing the size difference 
 image2:
 mouse2: 
