--- a/_posts/2019-06-04-461.html
+++ b/_posts/2019-06-04-461.html
@@ -2,10 +2,10 @@
 layout: default
 title: June 4, 2019
 number: 461
-label1: Sugar Maple <br>Princeton, NJ  -- HNE
+label1: Blue Jay <br>Princeton, NJ  -- HNE
 label2: 
-image1:  https://lh3.googleusercontent.com/5woXdL4_ttGCeQ0TV5OAp2omuBefEWvr0hZwTbdxDX2Npm94ldARrrRK5_ZnbqqUcLilTktGna52WRRPTiuxabuSf__vPnif_GPGKEDvD5Hq8QLFEG1ZGlgdXJ58W2i3ScfecXNrRZ4eSHx6f4O-fIJvLvwt-PD6Du9ShY-QyGARuJVzepkbBlGSxh3TtyRjnMCI4zp11TFNY56qkV-vvg1aVBEBoVctKysDgl5Ax-V_EzuQEDA__nh88RL6TRVRLgvQup1hs9W3cdLz5wryyXhk8ZJMIhtLI_QX4FVX4D0v9o3Xthsh-imkKxyzQEqTuCPEPrZ3iUX0pwV2u4krlztch1VaXGfTdIPyDBvcs5GDjmqr7ovnFuQlsK4FYrm6IBAyfOZH28W7U6e9_D0HkgIoYrdplPXG_gCM83WXzNVIc27441YCY8t9AqvY5cUV5iDOy9pO2jo6M-U22Vz65qynScg33mLByKp3YccRdYM8FBbF32-K00yCLyX939wqvLhrT0ScwM5m-VjhUfuVdsMYzO3Z6VR67aT0vJ2ohC1yhb2PRv48jkJcEDpvONyvWbFr-4QdCmSkQXNiilmfF8WVmoaRQwtFTfqCK3hWlxocWwKJVPS1H508jzvOTBOVK6C7er-z70T3FEQg5IXS6ZsuhSE592XF9yJGPbZZLSU2_Y-lz244OZxuA_vwNBHuQB0yQJFfW3FJdUGXdCzo9Yb6=w822-h548-no
-mouse1:  
+image1:   https://lh3.googleusercontent.com/y5E88zjhiVvxovn-Fsd0ynG950Yvs_a0Ad12-3EWJjoEu6pgqDWqlWv4bfjgsnyDYs1WB8JZ3XQPbooRpf-fs1hhFg4cVuwalkEGy8DyD1qYzPLy1Y2IU_Y3T_s5d9bOPK_HQGa537vGakerPAQBbfJJPyFQl7azADsbd80-P3aGx5HY7Wksly8uo3r-jmcq3YKZdhKtsIWPpGa0AkmFkOZmDRk3dHeF1Q5siuhzY23Hbk_WYziMzdw3cbpGCIqQlQ-1e4A3FKMtpo6xjCRfnFkcPSLKgs44cA97BMgWeZ1T5TwEoHOBoq94LNpZlFx1Dlk-8cTW0FJEo1QvRYjb2K29kFJeMW-tCTIwnPBFcrN599RyQdqQXFgOENx0AWtbl5_ybLbVRSz_tsVKMIQYm2mo62au6VaL1LCu1l2uHp2Di3iYhQn3Wv3zrGaHkIb4vvcVm6B4RHEv5Pd569ElFugMZqee2I6Hy4s7bKEXcnDqtLZLMFW8HulWn0LGxzRJqyzP4iZWUf3i4vdaruEeNLdOOnrAbEOz2nLDj9gVgfgHYACNO5giTNf4Pobi7b2r-FCWCnq9AA9EQRMegW6iERFA_zTLk6DrHOKyRU7nanHqs7ylwvDsU8s1L8onwKehivGWq0eWqED50-fxFx1j4k7h0fxfOmsrdYeBagQ4MnbClLqKefLQahJUJW9J-sZZSa7IeDDisOD2Jaf_TBILE3s_=w822-h548-no
+mouse1:  Just fledged! Amazing the size difference 
 image2:
 mouse2: 
 ---
