--- a/_posts/2019-06-05-462.html
+++ b/_posts/2019-06-05-462.html
@@ -2,10 +2,10 @@
 layout: default
 title: June 5, 2019
 number: 462
-label1: Blue Jay <br>Princeton, NJ  -- HNE
+label1: Lesser Goldfinch <br>Boulder, CO  -- HNE
 label2: 
-image1:   https://lh3.googleusercontent.com/y5E88zjhiVvxovn-Fsd0ynG950Yvs_a0Ad12-3EWJjoEu6pgqDWqlWv4bfjgsnyDYs1WB8JZ3XQPbooRpf-fs1hhFg4cVuwalkEGy8DyD1qYzPLy1Y2IU_Y3T_s5d9bOPK_HQGa537vGakerPAQBbfJJPyFQl7azADsbd80-P3aGx5HY7Wksly8uo3r-jmcq3YKZdhKtsIWPpGa0AkmFkOZmDRk3dHeF1Q5siuhzY23Hbk_WYziMzdw3cbpGCIqQlQ-1e4A3FKMtpo6xjCRfnFkcPSLKgs44cA97BMgWeZ1T5TwEoHOBoq94LNpZlFx1Dlk-8cTW0FJEo1QvRYjb2K29kFJeMW-tCTIwnPBFcrN599RyQdqQXFgOENx0AWtbl5_ybLbVRSz_tsVKMIQYm2mo62au6VaL1LCu1l2uHp2Di3iYhQn3Wv3zrGaHkIb4vvcVm6B4RHEv5Pd569ElFugMZqee2I6Hy4s7bKEXcnDqtLZLMFW8HulWn0LGxzRJqyzP4iZWUf3i4vdaruEeNLdOOnrAbEOz2nLDj9gVgfgHYACNO5giTNf4Pobi7b2r-FCWCnq9AA9EQRMegW6iERFA_zTLk6DrHOKyRU7nanHqs7ylwvDsU8s1L8onwKehivGWq0eWqED50-fxFx1j4k7h0fxfOmsrdYeBagQ4MnbClLqKefLQahJUJW9J-sZZSa7IeDDisOD2Jaf_TBILE3s_=w822-h548-no
-mouse1:  Just fledged! Amazing the size difference 
+image1:  https://lh3.googleusercontent.com/eg2dHXCy6hLiI7R9cKn4B1XpaghyfGsSIggMVvxTMBoKGrVoeru1fEnXoDMbE40xaRiv_J3g_BPINYchh0e5AL3CAgyYBr-g8gPFJkl21AhpvX3rUTdKMYGjJssxiK7O-LJf6LRnmzhZhaneA5uQglnMlDqfLW5B5V205-uSRubcXW-6v-jSGVXmQyz6Qstf5OnZvihHzJPkj_i5Lmap2KXEB4b6LbgAj3S5Ab2DkBs8J0RDWkS0QJ2XyxR6d20q-T06iC_Ttf2l1YLDJVKred5eNuTCVp0mupV7U8f4hDmGVMO46_XKeYYcZezCKkO3HuzT-8hfFiU91erEDff67u9qY1yii9wYcEswOL-DbdlyJzWP-Hc1P8uBN-13kVf3_uBHbrGQc4ZRxSr61SsJKnWUS1UPRLwWMAc7CIQY_OvtCT58BI9WtzJo_yTtgEfsk83SJPFMSwJl3Wv7kG637JhTz5m5Qwk8NCaxH8zTQWg9MGgGebWwmr1igniE3qyMcO7whcDD310opZ-awIcjCbZBtFNyKKLqk-7wezSsUTxdkQkNuw8JyxpkZyViG7QD1bK1uwzV1hk-5Bx9lopH4eBPTNK1-vo9MZ8wouTqk3AMXIP9mm7111cxXCCAoC4X5hB2HxthuL1ois9cRY3-swOLzOgxmluf9HdkQKeByVh3MLasUCUWmesLSUJnQhGl6jxxPHgM8RQhp2CSk5Arawpp=w822-h745-no
+mouse1: 
 image2:
 mouse2: 
 ---
