--- a/_posts/2019-06-09-466.html
+++ b/_posts/2019-06-09-466.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 09, 2019
 number: 466
-label1: Broad-tailed Hummingbird<br> Gothic CO -- HNE
+label1: Broad-tailed Hummingbird<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/_mE53bkf2DLEjRV8HLUev6WsfL4l0EdnpGQaNeiZ5MMK2-yp1B6O9d1xG0TraTNmVCF7KS3ja94JwtDYR4kcQ5frJBsimQD0XRaw-w-MC6xntuOgOpMliMxK0p388FIGh17r4rERGK3quiUg-fw8fXklfNbAFKP1u2a9LPn5YSyagtLWzyta6yxVDwnCBj0tn9eopaTaYAcFtXWRk2H55uhWbbOqtuUqmgfP4zJkIasekxyXeyLtExW_jtd308-v5z5cgCKMr_E4xxom0Bp6GeYROyQca1nDFlYv5f8jAdMRfHntk-wFyhZxfZGBbpdsplbUIFSEaGV2TlsTRbAspsgPys2XCsamEpBlKNnOG02nS-oSPbSbEH9iWDMXniNpFIXkVOBlBSpncEs4y8v1Zgn0yZFLYtBC0_-77RdG30QuJRKPdA0FZe0sW7vnMKX8em7NiXJQK1ven1kR0JX_AMlZARZdCRhpFsgmgOrwwiCdIDez4eTrM6N1NFvDLvMJzyaMO7mS4DWUEyYsN6mBq9rvkrrq_vIW9ggMDpzh9eSlvu80JTdHeb7hFSjssT2fio7K3HoKUOOKgrKjUY_bsxuNFBKtkAYWtX8UdsqWLSTTj4cW48PbxqK0NVH4ek7gpkGo7nDWLmGEmKdAcqyrmLY8u55yUwUk6V9ebsoA9wpdVjEjFe8fqrbP-1VLYTY-aPNP01xZfXtsOGULfBOakmAE=w822-h560-no
 mouse1: Their nostrils are amazing 
