--- a/_posts/2019-06-12-469.html
+++ b/_posts/2019-06-12-469.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 12, 2019
 number: 469
-label1: Red Fox<br> Gothic CO -- HNE
+label1: Red Fox<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/9XKOrym6dDKWXfpHxVXQ2UMb-SGK2OmCipJ-6xJQeNnVyWH0YFO2hujuNCRjeGKdHurAqJsVX_UHU9fLiz7oOM_UUkeg6ZOfhwilSw_wQbxRakZ0R20KuNZJwpHiT4Bah21DJxh1Jue17VNhiXUOKVKEs64oFC51-G4403swilY5BUmBI3bo1H69LZIRXd8YBqle8BlNcfrWJld2niWeVelRCtKbkgeM_noCa74ygrjZn1iBtZJCg9pQo7DPCKroaF3Y5bgkOAvsxI3EQVjLnfHt0QMqzdQe8zt3C8MHT5SfhN8JgdFyGkM_Cdk7vexcLiWiy2K6yuoWfmB5A516igltfV9olBLUoTMJs-2FrEsFQHcPm_RnRbLZ53LGjOn7ihJoQkYKcQ_QvZpZNwx_00Hq0NsrBANniqIoXy--E65XI6REamv_GaRRgtuS17_j792QB7HAEBdaXxcPW3TxgrMPdzIkmW7oE8vXGrDAJ66bkxmcHQy0f6CySGAZrX3NYS-CYlEs4DwR5OjlKzuzHgpKBzuVTFZ16voGKUtdhMi2MvSJbCKejiD3BJYEw11Sg_1sUmfgglyjiJoYqEyUwys0g60sUAITUtNgXJxBf2opTMinayZGywcnK5-LDFp1g8QtFQ7Za-MRiGaMR0mllf1jdrYLhu5UTTSo_Ui2G3waOrsNqIVmjEI182tl2uXR691Q5yah59df-9LGCwCSuzrI=w822-h567-no
 mouse1: 
