--- a/_posts/2019-06-14-471.html
+++ b/_posts/2019-06-14-471.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 14, 2019
 number: 471
-label1: American Robin<br> Gothic CO -- HNE
+label1: American Robin<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/TKAq5xOauTooBWfL7_tlMKpmh1wj5aTMOt75oxnAznob4UQzt8Y4TvtaehypcInmI4ZE4Qrflzx3ZqxSx6gXaR63nEl6wmkySKyCqMq8C8oH5aykwEVI1ewaPojgohzJkbpCvUoVKt9hy21KLfxiVi0AC70qH63ZSOGiLVGswtOo9kqBYaN23DbqRkZlCrXU5hf1tk_HS1zgI54tcRPgWt0v74Ksz9tXXSw61PFrJDkzOG4ar2vUUIE3R59WHoC6ky2ZpuAOe5Uj0PwfrAJK4PKXsqELXn4ccD6Gw5rcwj4EBgQcdsFbV-GMYqHiJkoKhH4yR3SDrS1NBtgn-NkYJG82dLZNx7Iz91O1_ro1IelJwuPLmdUMPZjm2H21aUMDTUNc5IlNLLHgzobo4tiYq6SVpgHS-G-ZjkPeyB7MOPSdj8G6q55nrJqTouxp_cAPvPMDB3V6QQRUxUDoE7KA8GU6CPDaWw3xPc43g8d3OtfhrH7s8-u6JA1Erk_Rr4jPfLjhqC5Oxp4zFNOc-wfW_J6Q08BhugfF__dNBZkHbXF0eCDLCR-pSfocKZVxclAjjgcQXSKWOtys5W-qXl6xP9rbj0xywQ8Z4VSVdSo1uCVhcpWEM18xD1uW6DMji1WY7KI-n3WyQkVXIeiCXdOdUJhu0huoh3MX48YI5V9KZLXkeo26asUK_nnlEffSVjaNdPqkgzUW821DPfPUaBhL9NiX=w822-h913-no
 mouse1: For newly hatched nestlings
