--- a/_posts/2019-06-15-472.html
+++ b/_posts/2019-06-15-472.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 15, 2019
 number: 472
-label1: Ranunculus sp.<br> Gothic CO -- HNE
+label1: Ranunculus sp.<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/1gcZwpHycKPvOaU10DV_Ng5EpUwhydoUoh5uKEPW64blIPJnwogmhMLrZ8QEroFH56KHlfBuclU8JEPQy1PLgJmTTevxkHvpXwmRbNcFAg-xnNEX1v89UG9F4yJaGS9C4Hz9TK6mpfaNRvdqEKlhk36kCInUXZ3-6NqOhhJGYXeVNYdQYhaxRn7OoTGxSnDdqGU295RVfnNO_qZWoc-elASLRvabqDDQx8V37GXi2jQllbYlTGw6JjjxNaJxeRyxPhObZOSqZ98rd2YdqSlr6As-5RXeZk_B_b-Ll-9DKRIghB_HBF72d8xA8e1NQzUGjWw2FIbCJQ3qZ-FQ-GjEKGzlhchCrC0SQMwzBkivP9CJVCDSzSFxkBz3S-uwq9iCciZm_J75UQnPe4F10FDye1ldWNXdpgZBt0_VZ6MUEjF-u1nSLOrcHx0hWyquKNEaIQyulx5tICnjIG4-w2YlM8VSdx4hENbBJrzn4sBbAgxuFrX_h6OqaQ5L5CjWP0FZn5sFoSLMygVua5HaS2LEwmewPtip5wfdgvn7eE2LGvvBx_kdyRwYMrumceFYBce1e_mKR5wyHxopUc76Ey-Q17S6rHnpdMlon_W8g80rM03BC6OjyUNSogZC5jcOluPrW-cuEM07yyebHEkB1G7WtO2HMyv-2N4DM2DW4OuY7SBDaOLJqOvemGMX6ZsirwRWqoouRwSeOx-5jwDNgtyCUm2A=w563-h926-no
 mouse1: 
