--- a/_posts/2019-06-19-476.html
+++ b/_posts/2019-06-19-476.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 19, 2019
 number: 476
-label1: Lupine<br> Gothic CO -- HNE
+label1: Lupine<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/BIzt4PIIj__d5zjiEMf097FXRe8x5zo6bamOEJBFPkJq2sGhVMLO-h5dKJRxcERm4EcgADj4C65zkE12eLhLqt1XC5GwgEYDZl-8uf77sQ3mZTim87OamRL9KCOa5ncVWQt4-gc1sLDj99y3P5PC2CBfGXxUcdwkAGSx7rJGckfj1XxDHgPVAnSb2i2bmhv6iNn9_KKWjVqODeQvBrSXI9ZP3s2W5uLYh2SwDGls4WbllQnlIQf5GumTwNUNe-x0Bi3KVgp7TUoComt36-LcdwOYAbtM-Oj34RJu2CTmdbN3Ti2lKL4ic2FXk9WPX_Z8oodrjkQLPOYkJEC5eRFxBYLnoL562-kVu2QZ59RPDxAEFHzv-5yi4_uG8R9LJWbY8KS52hCt0xVQX8vy_ZxOnojLf9h3nHqXHEOm4ukm9TGw8jNK2YX8YL4wWDUAR4z1t0jb-YqJxjs057hibjtbvB8jgN-_PLI3dkVB5sVD5BVqUX6mMIVpwwsL0zm90snh3oaajOpl90Mq_c0oynjq8nqTlGcESCRKEnI9ZSsJd1rnT8GmCwKwQ-MkF-uRTOqSy5Pyf1gXs7YxhPaIkGfyHOGAiv9gEy0PZjI-6bhmDR-QQ-eXWyYVp1ZSrN7xqer5v-c_j8M2TNI07TOlj64ilf10c7oTCt2qekcsAG8A96OouHynYbDfuPaNSsZSyuoEETwZXudpU0So2d9H09DKO7Yr=w773-h926-no
 mouse1: Fresh beads of dew
