--- a/_posts/2019-06-21-478.html
+++ b/_posts/2019-06-21-478.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 21, 2019
 number: 478
-label1: Red Fox<br> Gothic CO -- HNE
+label1: Red Fox<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/vTD7LJ_i9EiqmDw8pW9Jlg9GDWqffQc3z_bcmTWvmUlLsfwrjIeUS4dB09EzNP12lUJQa7kGnmysvpWzTfJIf-fYh7aA8tNK9gEUDYwf5z26gE1B3PZjhIuhuIrmqxS1lgMgV5j5pLqBlfo3tmxV74qc_Wu0clq5zr6AFHKL1dfCQgeuMUo4AAMpQebhsJRZiZf4Vfv5RPCTVFOC0e3aq-bUYYUWOFC_Z2v6-OqYV-IGTIE1Yk8QkxF8RaUErnRchPNg5XqAF2a-yga_uDqqrkf3i7F1xmIHKthIwNmRr0gUCjKWaVMoa36TtWRFqzDY5hbRtxwBg1QNW-JG1fXJ0Dh6OfbOzP4yUhkfiDxn1zZb90nxYU2i7mBy-X_Qg3vUi83VpD1PbyDW9W0_zfcrK4uDocUbLCH8WY950f--QBItxV4Au_knpkf9OVpYVsIVgzaGXkNC0DzrxUcruy8iHjdt3j939g1FgnAa7RLq99iHaVWbT-6hpIKnmtv68pzv8PnTKndqcay8Q-GC3tAaBwM-d5M_LkBIEM7D9zzHKu_sVPSbzyHydYUO1c9f4fHqE0PFa6j4f8Nv8dHveto65blaKHxRTZnc4NzIpCQ4GMqjZPJDvtQf97Lx8RqHUQOKVI4du6NYaVUAA-Q05N3LjqzLyqwUw0hSHs32qlU4As583xZBxGYhyDE7MB4QWvYXCpvgXkTHMgztyp18uZnw3dp3=w822-h623-no
 mouse1: More foxes! 
