--- a/_posts/2019-06-23-480.html
+++ b/_posts/2019-06-23-480.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 23, 2019
 number: 480
-label1: American Pipit<br> Gothic CO -- HNE
+label1: American Pipit<br> Gothic, CO -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/RtIhKYdZqcWZgYqaAwTqMpUq9z-V4mi_F_YpMKZytfaVPrB42hgCV6FTy9oUiy3tNb558nGVrdhOB_Iv7bYEzE35eJuf9lLW22K4ykPkQ3v808SvsdkehvkTVnTKwHvsBg3V1LB6CWoZeKtMyhT97TlnCKdpywsYe9AjkAR-Gg562xkpPOIG00ZbQntZ1ipaaZ6yp_xOr-8i57UioB3WfY831yn--TLXhZSoiFmXbJGeQ0K79AhZbUzbLKWCMeyoy-tMbkmWvOCYZWJEz_kDNMZScHev7xu9fU7dXBWEKBHPxvUNHfFs3uq9Ofg48f1Oc9TQff1JQKJRg7Gy-M7BHDPNDboQupD1YQfkpjnu2Oy3UFUc7t2_Rv0RwI3dsZVS55Z1cOYJ3w_AA0h7IzQnZlbIGudZ5rjXv3OkOMxvBOV745Wwvez4fSx1n2EfrkPOYjeww8enp21cN8PWq5ErgMJuEFCXLEF8BAv0xwqdTdPlx9C-8YJWypkI3_GqejjH_A9bmUZ4-aH4XGjdfbaBAKXi-b7T6s-OoNqJPagJKlHLHRLPABhZPRQV4vx3Uf_HaAMgd0-Pzx_knltEeWaEXVb64DlvQTshemtW29N1ARmVTTC5dpSWzAWVhMeT9WHhnoEvAx55BEsbLHXKZ-UBBOsmbwAj2_Y=w778-h975-no
 mouse1: Providing soundtrack to the snow 
