--- a/_posts/2019-06-25-482.html
+++ b/_posts/2019-06-25-482.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 25, 2019
 number: 482
-label1: Blueberries<br> Vancouver BC  -- HNE
+label1: Blueberries<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/sq0xgwrON8wvlAO_az7qGlTBuDfu8x7doBy1vZFK2W8QaWNd3TPjAZW0oq7XlIHXRh6XnAKbmGcYOD-inANzoqz6N3JQJwYTWmcphaXTglBxwA-AELXsAOVQZNK4Jd09kmfvuEnq7Dn5z0D-Q5zKDPWpZPbNpvKJ1BW9-3eBSDmCVSVrUM8J2Fnm2_FmcJ14Xz0LtHBdE4oZg7jFSzm6eJjc7zNFfExdUt65DKmytTAyZnB1v_6UdFn9viegVrB0qm_PLEUFVEpWOMcPAkCQDOumcRVZOt2VpERWOiMqjKVPxGgb1Q-eh5HaHgCOn5nqoW-7ccdThuiMvGZ3xY4O84f0evarjWfpQjFPMBe_sHRIi4zS9UIY32Uk5Q6GEuP37SI_nEtQWiHn7Vwux7G05IsmJfmvcjWfLAcP3wJf_MDNLPtWVmMTm66apgEeK5QgEty808-HzNOEZ9OKmFDf1WOm_rP1mZUlB-xaSn13WjCfgEI2LgV1xOS7HObq9hxiDI7Tb5OsMfH47TqH3ADupfxJZggNvm5UdrQNlB3s7YYxH2bqTzJt6ROtHJykgxWvqzYY_M8ZbXhJFKXoE4rbx1IHLEW2ek25pcQvCwEVOEuZnZ6TwtepOV3NmnNLqtZOYhisWpZHB_zSBtIma8VqmgWBXKTIsJ0=w822-h857-no
 mouse1: On a long bikeride, we discovered a row of blueberries planted beside the road. What luck! 
