--- a/_posts/2019-06-26-483.html
+++ b/_posts/2019-06-26-483.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 26, 2019
 number: 483
-label1: Vancouver skyline<br> Vancouver BC  -- HNE
+label1: Vancouver skyline<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/iYLmLJOcwBFuDU7cD6et2YUivME0OlDVXkbBvphXFnKuvrtPc8kEF8jvaFD6o8A58B1K1XbJICDRc2tKOZMuKCS81DJ3Nr6h7PEUxj13UGQrZHGQI7p2b4DgC8nJQbwHkuk07nDuWkAiEZvWFRoadOd4qeqZ8nsadlGfKGvR2x-oiAyY7gEURkwKn9bDY7dJ1U4m28lkHxDUnelqudyMc6wj2iRLs3G1A43TprmlCDzC9FnYqZv_rJsqtyL93kqVKX_pl_ALBGYov4YTA4fjJMGV4kSST1mUZAMc15TVFFQTgPb63IR5TFuuZWxfg9s2IqfdRIKOMADZEt3VVN1SHtFgLs_Z59yrvC1FO54KA5KT6sMzkAI2PtBA1jQl9fbYf3VeJ1naGL3sd8Twv_Iv9rTSIhDCgkiff4HRVrVRdeBZxS0dLj7jcaPWhb7WJMTQSHEa3Nrs2y2ukvfuuDKizChh7K5UJOtFwCiszWy1_gbpYzU6dAICNGqlpwz8kbi7ns89FYoRZl0jBighI_dWC39fNNvJcfZdLkRNaOCSTlMUkBMj488a5SJrMRE1rVm_QI1HL0KWGSss5itF_SgHF2_XrprE-Mk5nQBzQ0FG5rmxFza4OcLqpGpDAVDSDZlUuK7wXsIxOku0kNW9V7Zglmg7XVMGWYU=w822-h707-no
 mouse1: Dark skies emphasize the brightness of the city 
