--- a/_posts/2019-06-29-486.html
+++ b/_posts/2019-06-29-486.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 29, 2019
 number: 486
-label1: Crab (leg) <br> Vancouver BC  -- HNE
+label1: Crab (leg) <br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/yNq_iNCt3fosKhZ7gN3nTwQpheWaX5idawVO8e84f-Mua05JRULIpQiu7b_CrATBZHFTUe8Kbd_H2S1xYP8KIWJCczobU-0xYIQ9-0n5G4DFjyEr6aR6mbjnSjMrgYOB3fsIGYMhLOUMLQmFcdAdwWX9kLUuLXMMvo59i8OlO5QfGRwihTZLy8T0zKLel60emNd3FOzbjrzsIfd4RJ0SPvLLnFmMHbjWqpaFzVcy7aE9D1DelYISNkauFapFBx4OipqqF3CJ2TYqSfeW6v4CN7pEiXCYXulMXlRVqckqBeNLAclv1nYffkuRmn7RQGahKyO0mnU1f_jjIPNvY6LCtemrSqyXO5j4IZCuEoJNtCvWtzakKoJvEXJiLPr1dvTIyU-ONWbJOWWjFMP8xgNOLw71v2LZcgs_y7r-tBYJs12xrFmARhZ0kJwJY-1EoWRNU9q9LBujYduAibwuf-QiqR9F3LZWBjxGROcv5vrdRiPE_HzF9hotpxb4rINt-rSOW7NPMl4JfV0jDq180JWLls0nKbIrJu_0zZka0uNxEbWqnpAv94hI5u8QPitxCbWrl62Z8cHQrFQRxTSFwsd9VJXQYxiDkjO8HyjF_Lsa_rHJYrv-BgVkoqGQrZ_7P9o_4Hmk_jnVcX-kf42Xj5YhGbfnrMZBTmU=w822-h854-no
 mouse1: Legs bedeck the beaches 
