--- a/_posts/2019-06-30-487.html
+++ b/_posts/2019-06-30-487.html
@@ -2,7 +2,7 @@
 layout: default
 title: June 30, 2019
 number: 487
-label1: Shell (broken)<br> Vancouver BC  -- HNE
+label1: Shell (broken)<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/qX5FDeJoBCXp2v2ZhK8Ls8y1K4qI5QAA4fGnRAxZRhmHh1vTvQk9oA1rVYB770SwWl2MMJnqVqWI1UWgF0-clHuH92BYacuVBryKKLWDTmIKAB3HA2B07_mwrZFZ2jR2ogxJqvjH-6y97QwzXyWtfluwdkO2eqMSxMKxeO53dDAcBAEPmY1QnRKDeIo7hXJAuo3Nasqw0ukb7SLBLZ_kfzUNCNAXuq-Zbp4_MnuZW3BlRHtpnLpr81Zd-0PIM63GfoXGY-19g5ZowzsJooVwC5LKkXvQMtMVMBt1IhIKls_av2JelgwAb77sgo3yk5JV6mZXhdu7stcd4DfWjqI_h6EDPX98FhZ6POzwnKbV9IQ3lCuRRrxYOTjRhqwMTJhKkO76-SzoF-wtQM0fV7ojMCVc4_lExS4s2pSGn-hClvpdRgqBbU9zKAWastHL2_r0o0Rs0U4o-jKVvu56cpmINWEqpXRc-TqR8RDohBN8HVAOm6bICdOGbZ5rcOQwfoENgAMK97cMOs4XW4kZsKzaRDcyxeILuZ4xhq_0esgAjn1U6T7yg-EgXYZ5UUd-1pwfqUOIaSW6Tw484FqsQ_E38HvkhHXJtSZ8yHYyMZKKTz0-MVIyLbjXRSb2YYqLQU-IqR0RHyVaSO5uo3IocYXuAXc1Y1vsYtM=w822-h747-no
 mouse1: Beaches are places of growth, and destruction
