--- a/_posts/2019-07-01-488.html
+++ b/_posts/2019-07-01-488.html
@@ -2,7 +2,7 @@
 layout: default
 title: July 01, 2019
 number: 488
-label1: Vancouver sunset<br> Vancouver BC  -- HNE
+label1: Vancouver sunset<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/7GHTevYEYI_nQhGDo-Y7ZfnspERUafb-leywjSGrz653gtwGUB1kwlZtA4WacHf_ksG6b3g_mLru4aVV08aCuaDEbb9KSoa4_I1qwqOXowZ2qVdVjDI4d46EVqKYqnKO5MSgg9nwCLr4aTVsPFOPwQ7MLBKvp_WeOYlPkYVDmmsElxfgALrAND7szTqlLWmSDsiHaGoIxPnb9efynLZmSwN1bPj3WzP8hm6GJnJVf42uSTWgfM4ql-H8oymtZDFjsKSm4rnlk7fWr42PjBtm05aJWkWx3D0RyNk5AWLfZW5mlVbVFI1pag_s1GCJ6s1-ccNDyGyrqsUqfz-YZx8SgYHf-0_UXY1x5Tzf56C0gkiPz7KicPDNZgVrK-0RXbwc-REbNzpe_0FnJZgSWkWYKgPMuMy5T-Iw2bXWua0BmI-qdVs04BVHLele0ZdatOz8Z-1drTqvmWEVoAuITywPYOSIqrh3YPKE5rWATLI_qWdyegDeck69VPndi0gubpvUtI9XyWNBVSTQEACQpGIhP9X-i0jkgZOtdl6IQVXyWSpQJap9I0W8E6RO3PqUIr_t2faZFvpdvgu4DfUdRXUwnAZFCCAW_fOXvywk9iqSKZ3A2Rj2Z2-RJUzyBb92h87RTvuDT2JCa_Qe-a2PQmIndH0OCk4CRD4=w732-h975-no
 mouse1: 
