--- a/_posts/2019-07-02-489.html
+++ b/_posts/2019-07-02-489.html
@@ -2,7 +2,7 @@
 layout: default
 title: July 02, 2019
 number: 489
-label1: Ladybug<br> Vancouver BC  -- HNE
+label1: Ladybug<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/rckd_fEv-wEfw8WDG9Uuhi4z4Vrk-a0mOOiGx-CAvcb6F4TDyUQs2sc-CRgFkii38icJnKLebwvUsP344kfa-SMYB_f7cRe_P11f1U-HNxkuuBBK8xLc_-A3ws_oFgPmkPsUKmNbkK9KCnSf49THPv8y-_bg25dC67YHQ6QLftNml_vlAckACob9TKI9hihZ0P8QkxCQCY49IvFDBEtiHicjZYHlNjacN1wHGjEzPQ_t2OqJLZmnfRbT38Bk2hoCNxBugciIbco0r6Y2s2e3ubt4wf4V-5mA65STnRtqhYjNbBQu7l7uxNR2odtantePe1snKoioWN8K2fzTjUXDg5D2NkhlKC583cI29zFl58HRgK_M3Lk2NSuxroqR4LGgAtsyHR4VsPweboA6ulSaHbekfcZeMxE_7Cwiz2eLPEFcaccnUpU_Feyez3kvbiYo7NIm7bUECI-RZ2svdD91RCHWrj-RSa-f0VvKi4PGNbcb0BQAMNDmXLhr8tBmigQ8xk1YRfgnJeH55vEz4yYEfU5HdhYp2BLmiqb9aYjnB_RB257dBR29HOdw2evz2vnJimFrUExVRMwpNbbrl_sspvtusglkdvh-hg2zmI20TUWYJsRyyNPPsHZcAeSM9HqfaBGKPMgDc01ka6XqvJ1rLfE_dVg-G3k=w823-h883-no
 mouse1: These patterns always fascinate me 
