--- a/_posts/2019-07-03-490.html
+++ b/_posts/2019-07-03-490.html
@@ -2,7 +2,7 @@
 layout: default
 title: July 03, 2019
 number: 490
-label1: Bladderwrack<br> Vancouver BC  -- HNE
+label1: Bladderwrack<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/Gg1eyoc38LBuNa4xRgEZpyxewiZnG3KscKOD-XAzaA0Eg26prtbZICrLq9PUMAr1SUYryp5fYujLlhFVvTRGJDn1R0jaz_DLgwRQwbFTt9eZ3Nkv_gClGUaLd2uLyWJzSMa9Tjr7b5aiIfLJY6hhEOtxU2lUwsfONS-tya06XZkQWYBcoZQzOYZIHL60OtdvYgJKI_zBES1AMqFe_8monQUmM7FTHXJG2imjWVPUptwFXayk4CSx1UN31y17N9YoztnP3UXOnM5xgmQkTNA6MInFsUNtm6NaHq95R7HpiJa1BKrzfc_cT-QrJEMB8VYjzuKX22OPdUJiD4IkN3ea3ul-aYryl0b1GYll1hS3QLgweUTm1nG8PGRgVynLRkU9H6da4WGNCFMlyqE9hPVXaklwX01D0iLpUOsdZu08pGUJVC4IGavlgpqwND7gv6Pk8P-ddX4x0K3vkPx3mJTOlsKXwz31zqZN83IoiZYJrD_QswjsKCpNb-VLIdZk6zCOJQAIfozSAc0y1CSLQCq7vy0ZOjsq2Ly9qAxe1nouJ6T-PyKZSevGgus4GdDg8lmB7gMIoTDWM8yJywkpsMZZ1eIQ3iyGUQxiI56CGjVhWsjsFCGb3gaMcFX5dau9FdVQz-lQm0bPzbP2mCARn-wCUTIzdXfgKrU=w777-h975-no
 mouse1: Dying upon the drying beach 
