--- a/_posts/2019-07-17-504.html
+++ b/_posts/2019-07-17-504.html
@@ -5,7 +5,7 @@ number: 504
 label1: Yew<br> Vancouver, BC  -- HNE
 label2:
 image1: https://lh3.googleusercontent.com/JA8E4PTvOUEJZwupgGX26nwG8lYVsbKgLFIgUYbG4DIj3WQQ0jlQV0q4I1Efk_L5dFpB_kQpGGhhaU_SVEtQ7YWTxSFO3kFUHSvrtuIuXanMsXStTt84z5ziXxYTtTmJ1epdQ9PbRuE3GIrh3RBSCDPvTZZyfeEz4U4dhgIty58tlylqm8uNx5OEQgW3e-Xg4t0Zyu7HyrTNe0kzG41XiTyZ2gK141ZiLq_uhIK6Ay-cgn_60O70I2P-IqQjtQKX2A_bqLcFP5mXleIfTE7ArkaxkqSgXDv-r4uqYlVXlG_7_kNt9TrAINA1qpeGOIZGKMzwa_iYP-_jUpWPpRXslUy-zhD26WPlGNK5_fy1BWi786mETaSFUnLhzIvSVSsvVmnvZuXS0cJAf2vlEYEO6f22UEjdrREpVERYoUBZEhsg5QisAQOz-WgiYBVg9wJSS-h8OTvkxAgRaBc3jyFSk0Sv3i5XjdrmS9g9KKxOODe8kJJS-g6SOkXaxH1XqPvToeEl1qONP4-mxN6tpWnCJPEuxJWkOTwGPzy8orCVsK6VRMLUnfzMRaizSp0t-GjHBDlS9jNBGqZDfh5oER5YCpTkesVhL1cBZTGJnsg3uVhVuiKQrwgOvq7nkMmUkWa-mQD2CQEkfG-sdc--FjstKTm3kNK-XDE=w695-h926-no
-mouse1: Yummmmm. Just dont’ eat the seeds. 
+mouse1: Yummmmm. Just do not eat the seeds. 
 image2:
 mouse2:
 ---
