--- a/_posts/2019-07-19-506.html
+++ b/_posts/2019-07-19-506.html
@@ -4,7 +4,7 @@ title: July 19, 2019
 number: 506
 label1: Norther Harrier<br> White Rock, BC -- HNE
 label2:
-image1: https://photos.google.com/share/AF1QipPeqN1xEDSZVjZ0LJjIG4Omstc_-qW0sQSvNt5_RPACPSxwO9EX3J5Icj0nXZPvvQ/photo/AF1QipOO58nXeLY2hSqXV3DZIi1b0KO58OBbhmXsHiFL?key=YzYzVHVwZnFtNy1VWHAwb1Q0TG03WDNiazdlZTBB
+image1: https://lh3.googleusercontent.com/LhDCWJntn2kKmx6M9UY5fp8HeL1hPYlo_7vpPUPG8SOHgthyMIfB8Jc3Zqw3ZkVDLR_YJcYUFPfrekV3AiZ7JDU_ZShp0w_XrXMClkuAxMakUiSYpfn5LTfCBaZkk3qT1h3fgBrKxEaLE_9eoMjcKUkx754HEWdcyo7GYN630C_Gch1CAduZgY7NxAqYA4RVXwWzuhQxhGuXXzB6RwAkRfNr-vnHoffhRFcKOAtLSvuTBUns7epF78TUUOcjwJPiVVakvdlYhANaio0SZiFv4TmEiP4XITR56_xoJJIiEhiKtXxvdw4nbmxi77HI9SmBzoYhmWTEFmKFWKhWdKRbzr6OQi3EIjMVsm1BvtAZIuS08f6ni1xq_Y-Z6IuU-uDxsKV0_XEWMd1xNYdGJAJgyySlfnUi39fG7RhkgUe1XK-bFIM9BUGIeMkCI9bHUw4kVkoavw_TGGUkMM7r4zaxUFAN4k1FEUxRePZ2mNL_NWdsIGz7lCD4MLkYFHDUxJPT_S1PonS9PGCfauzSqDl2YGzsah7jtO6xYCT0ruzwGvNC1eJilZTln-R8jl9UaWBdFcImfeP6tOdQH7Ht58cPsO9h10BwPKDkapy8G1zgGN26ajxhmm96b-Gf55xabjCK56qFx-43_kzCgiHm-WmWpOLKKSidNquQE2F3z8FS6K5I1wgGYFUm3sftCBAs6WkrGiVpNckaciSXT9kM2d8MoUnV=w689-h918-no
 mouse1: patrolling the border 
 image2:
 mouse2:
