--- a/_posts/2019-07-20-507.html
+++ b/_posts/2019-07-20-507.html
@@ -4,7 +4,7 @@ title: July 20, 2019
 number: 507
 label1: Mt Baker<br> Mt Baker, BC -- HNE
 label2:
-image1: https://photos.google.com/share/AF1QipPeqN1xEDSZVjZ0LJjIG4Omstc_-qW0sQSvNt5_RPACPSxwO9EX3J5Icj0nXZPvvQ/photo/AF1QipPNfUIDYX_OCeRBwBHerrO_1WVIigSNoaE5wX8A?key=YzYzVHVwZnFtNy1VWHAwb1Q0TG03WDNiazdlZTBB
+image1: https://lh3.googleusercontent.com/htIgVyssJ002bfE2RU8MjYrtMQTm-ypwlSDXav4CjWSHCUjAb6hJ3S-_GqpFZq0l5mQFWKjGTz5zLjIosVHQJfeKKOAsuMnD4BUw_fpXP0XI-X3ERU3yu8QhYKFKGjXQ7r8d0uNPAteOcf68O4OksZiolRsPM-3nN6oz5iflX_ZiAw5hijw6Ue0Hp37ODxLL7DjjG-hIfbrcW72z5uexrK4zhqDusmvUsfFQRcN3yEBqYF24czvMvaKE-xqJhLgmtz95I2faVTxGK-ef_kNdpdyNL6ksAB8G7wl_gqmD79uQngNHsFv2BtilDrOcZ5l3TN5NUF16LFZtdLUtEz0qAI3SWofeEotsB-lcTuiwWUC-OFZvB-hNxIO6Xn2amiRUIKWPoC5I_XbUzcG9I_DxSEWpeZxzNG1_nhBaSdq9QjRR8xZQF_Wf9XO6LWlAnRbZMpK14wLpucO6lHqwFzPEGsK2XnV5ipTFqd8OsSU67nQH7B6wuOdtIWsXn_z2s7AdjvE7Lcz7rEM9zuhMoAJlSHACf4J8oaul971JqqY-QsdlS6B7EAt7V_umjR_koFAkuaaHogL5NDOQIAQh2k4Z38lCHW-OFkFt2A7bed4GcqCtL1noYrXDedWL4IZ_Wg8CkGIIvQKJj09T84kN4Fx0lsCmwsbyszIM5W2eqlWJQ0HZ2wCpmlbim3Kl8UE7ASDzOfWQ6MLnos-5h1qZPoTDKudv=w689-h918-no
 mouse1: Winter camping in July 
 image2:
 mouse2:
