--- a/_posts/2019-07-21-508.html
+++ b/_posts/2019-07-21-508.html
@@ -4,7 +4,7 @@ title: July 21, 2019
 number: 508
 label1: Gray-crowned Rosy-Finch<br> Mt Baker, BC -- HNE
 label2:
-image1: https://photos.google.com/share/AF1QipPeqN1xEDSZVjZ0LJjIG4Omstc_-qW0sQSvNt5_RPACPSxwO9EX3J5Icj0nXZPvvQ/photo/AF1QipMy6e2wve6tVlMEyk1OSu5VznoxTJy3G8fLsNlj?key=YzYzVHVwZnFtNy1VWHAwb1Q0TG03WDNiazdlZTBB
+image1: https://lh3.googleusercontent.com/I_TnNrICUAmPLC1hsHxPOh9rfzONQqz-I5BByJd54dKqpzdtoJnhELHfqxbOvMxPsFxAGaBLfSYl74xN9GqbQ8BFr_0XCauCyDp5oQxphFwR4LscWubI211sVrCOPfeUD5Aj6JshtQxWwKRcSdm7tFSaOKgVgbhrfTk8Qs5ds9GuK459-LTCsUiih3G4w30DW0yIZRt59-Cm5RsdVBLEQZBgD-3uW0U8_diuUJv_mXfSPBb98mLRJX4eaIU9M7FyFhZ-_SVfT0s7GBWhUhZorCDdrH6URcQvFVjprBcS-jhU4ewGpsSTMQAYcR4YczoEQLyhPjHeD6LIUNfc3Ee17dwz8g0onTm-V302wffOdrVEFwGw5LZod46-fHYbPm5z4q_xVc9Dts3qsKjUNhCmtPA_P1tMXgPn5Ive5BcC0Li0cx3-oqc4s2x65QKVvZa3zilHGYSfYKe6_bxJz8-XZZplsybM94ek1erV4y4c7ZSLU6MlrCoYHwK6LFt6OMAJcck4TH1NVjb4fVfUdbZ_KYmp3FxXp6VPwgkq7Lf9ruUNG9M2-RF6DsQF-hem67pqdXTouf2v50GETwWFqdmQwR8SCy3A5XJM3l4WwKJQQs7ghnKn-U44HBDMbXUqdcoHtHjyIoaUaZJmSOoLem8ZyY9NBd_F73Wi2g45Z4Ujz44q0Urgp9_DjBMAekJ-ECOpbIWwyUih1TsylmGdPOAearc5=w677-h918-no
 mouse1: The only bird on these polar slopes. Hepburn &#39 s subspecies 
 image2:
 mouse2:
