--- a/_posts/2019-07-18-505.html
+++ b/_posts/2019-07-18-505.html
@@ -4,7 +4,7 @@ title: July 18, 2019
 number: 505
 label1: Brown-headed Cowbird<br> Vancouver, BC  -- HNE
 label2:
-image1: https://photos.google.com/share/AF1QipPeqN1xEDSZVjZ0LJjIG4Omstc_-qW0sQSvNt5_RPACPSxwO9EX3J5Icj0nXZPvvQ/photo/AF1QipPZDl6oqRxHHuTcun6sUsBQpdTDARKxV5Kz-CGB?key=YzYzVHVwZnFtNy1VWHAwb1Q0TG03WDNiazdlZTBB
+image1: https://lh3.googleusercontent.com/dM4CjYhnmz_dpfXNdNKg58Jnc8YwWAk3kVapodXwuXxZ8kJfPDLW3PB1aUiZwjeEM71PwYgFIiM-mm9tAzS0lNVzCUduIFlf79e2lyXnwhxn-XZE3wGHfUBHigg0SHBiz_ajVAVGuwc4YR5D0LpM1qAMA52SEb4nevGmk_9zGIX6rvLEzGK7qql1DkEyBuLR59ZsTNES2cmF6Q7di_qg514ajj86klMcLllm6TBl7CdQu5cCrST1JmkN0Fz3hvOfTEeJs0aAZZpREsaZ3pSdjiBbMHO9HAUbXSfuEzopVCsF6GQplexMqtrjLPGWV_Qb2YiT_jkzPLcbVZUpHbE8JdJ3Ns_3m6i8enloJ8_-ESt4UjJdxW-9zDnTx5i8zQBPNNIYocvmostvvjHFzxfwToCvlyPwX4nPPWZI6kX3qcflUBag8ziYLLyy53IlwxRqi-3hz_WL8gP6OBJOBotNIqUywsfUTnOo4Bol7nHLyrm6DYz2HzMLRPngFzoIPjQ9xsNWam5xwkc8py0gmfIZ5usUdhN5sPlnQ6J5YS9C24KNy25h5vy1dM1nbYCIITKHC9U299nZHXz5_JlyyySWdaSjp1lyvgIQ1D4GPRXUxD0flUnBtr3SE8V75M5p1_m5ZZsuRiaUDyfgLg-AMSUlwLUidcQ5y_avB2E14ZjJtkV3SQjH2Ft5nPb83eqEbcydJb0NeVPTMjXU6VVXCClPwhvt=w862-h918-no
 mouse1: Inspecting the yachts at Jericho Sailing Center
 image2:
 mouse2:
